added some colors to the background and text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Hello</title>
 
 </head>
-<body>
-    <h1><center>Hello Joyline</center></h1>
+<body style="background-image: linear-gradient(rgba(160, 243, 232, 0.801), rgba(205, 162, 240, 0.774)); background-repeat: no-repeat;
+    height: 100vh;">
+    <h1 style="margin-top: 10%; color: #027a70; font-size: 50px;"><center>Hello Joyline</center></h1>
+
+    <marquee behavior="" direction=""><h4 style="color: blueviolet; margin-top: 10%;"> Welcome to Alvas Pragathi 2024</h4></marquee>
 </body>
 </html>
